# solarus-quest-editor

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  README.md  changelog.txt  license.txt  mainwindow.cpp  readme.md
cmake/apple/: OSXBuild.cmake
cmake/modules/: FindSolarus.cmake  FindSolarusGui.cmake
cmake/win32/: resources.rc
images/icon/: sqe-icon-128px.psd
images/logo/: sqe-logo-unicolor.ai  sqe-logo-unicolor.eps  sqe-logo-with-text-dark-background.ai  sqe-logo-with-text-dark-background.eps  sqe-logo-with-text-white-background.ai  sqe-logo-with-text-white-background.eps  sqe-logo.ai  sqe-logo.eps
include/: audio.h  auto_tiler.h  border_kind_traits.h  border_set.h  border_set_model.h  color.h  dialogs_model.h  editor_exception.h  editor_settings.h  entity_model.h  entity_traits.h  enum_traits.h  file_tools.h  grid_style.h  ground_helper.h  ground_traits.h  indexed_string_tree.h  layer_traits.h  main_window.h  mainwindow.h  map_model.h  natural_comparator.h  new_quest_builder.h  obsolete_editor_exception.h  obsolete_quest_exception.h  pattern_animation.h  pattern_animation_traits.h  pattern_repeat_mode_traits.h  pattern_separation.h  pattern_separation_traits.h  point.h  quest.h  quest_database.h  quest_files_model.h  quest_manager.h  quest_properties.h  quest_resources.h  quest_runner.h  quest_tree_view.h  rectangle.h  (+17 more)
include/entities/: block.h  chest.h  crystal.h  crystal_block.h  custom_entity.h  destination.h  destructible.h  door.h  dynamic_tile.h  enemy.h  entity_model.h  entity_traits.h  jumper.h  npc.h  pickable.h  sensor.h  separator.h  shop_treasure.h  stairs.h  stream.h  switch.h  teletransporter.h  tile.h  wall.h
include/gui/: change_dialog_id_dialog.h  change_pattern_id_dialog.h  change_source_image_dialog.h  change_string_key_dialog.h  closable_tab_bar.h  color_picker.h  console.h  console_line_edit.h  dialog_properties_table.h  dialogs_editor.h  dialogs_tree_view.h  edit_entity_dialog.h  editor.h  editor_tabs.h  entity_item.h  entity_selector.h  enum_menus.h  enum_menus.inl  enum_selector.h  enum_selector.inl  external_script_dialog.h  find_text_dialog.h  get_animation_name_dialog.h  ground_selector.h  gui_tools.h  layer_selector.h  line_edit.h  lua_syntax_highlighter.h  main_window.h  map_editor.h  map_scene.h  map_view.h  mouse_coordinates_tracking_tool.h  new_animation_dialog.h  new_resource_element_dialog.h  new_string_dialog.h  pair_spin_box.h  pan_tool.h  plain_text_edit.h  quest_files_model.h  (+23 more)
include/widgets/: border_set_selector.h  border_set_tree_view.h  change_border_set_id_dialog.h  change_dialog_id_dialog.h  change_pattern_id_dialog.h  change_resource_id_dialog.h  change_source_image_dialog.h  change_string_key_dialog.h  closable_tab_bar.h  color_chooser.h  color_picker.h  dialog_properties_table.h  dialogs_editor.h  dialogs_tree_view.h  edit_entity_dialog.h  editor.h  editor_tabs.h  entity_item.h  entity_selector.h  enum_menus.h  enum_menus.inl  enum_selector.h  enum_selector.inl  external_script_dialog.h  find_text_dialog.h  get_animation_name_dialog.h  gui_tools.h  import_dialog.h  layer_selector.h  line_edit.h  lua_syntax_highlighter.h  main_window.h  map_editor.h  map_scene.h  map_view.h  mouse_coordinates_tracking_tool.h  music_chooser.h  new_entity_user_property_dialog.h  new_resource_element_dialog.h  new_string_dialog.h  (+27 more)
resources/: images.qrc  initial_files.qrc  initial_quest.qrc  quest_converter.qrc  resources.qrc  solarus-quest-editor.desktop
resources/initial_files/: enemy_script_template.lua  entity_script_template.lua  item_script_template.lua  map_script_template.lua
resources/quest_converter/: converter_1.0_to_1.1.lua  converter_1.1_to_1.2.lua  converter_1.2_to_1.3.lua  converter_1.3_to_1.4.lua  converter_1_0_to_1_1.lua  converter_1_1_to_1_2.lua  converter_1_2_to_1_3.lua  converter_1_3_to_1_4.lua  converter_1_4_to_1_5.lua  converter_1_5_to_1_6.lua  update_quest.lua
src/: audio.cpp  auto_tiler.cpp  border_kind_traits.cpp  border_set.cpp  border_set_model.cpp  color.cpp  dialogs_model.cpp  editor_exception.cpp  editor_settings.cpp  entity_model.cpp  entity_traits.cpp  file_tools.cpp  grid_style.cpp  ground_helper.cpp  ground_traits.cpp  indexed_string_tree.cpp  layer_traits.cpp  main.cpp  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.ui  map_model.cpp  new_quest_builder.cpp  obsolete_editor_exception.cpp  obsolete_quest_exception.cpp  pattern_animation_traits.cpp  pattern_repeat_mode_traits.cpp  pattern_separation_traits.cpp  point.cpp  quest.cpp  quest_database.cpp  quest_files_model.cpp  quest_manager.cpp  quest_properties.cpp  quest_resources.cpp  quest_runner.cpp  quest_tree_view.cpp  rectangle.cpp  refactoring.cpp  (+11 more)
src/entities/: block.cpp  chest.cpp  crystal.cpp  crystal_block.cpp  custom_entity.cpp  destination.cpp  destructible.cpp  door.cpp  dynamic_tile.cpp  enemy.cpp  entity_model.cpp  entity_traits.cpp  jumper.cpp  npc.cpp  pickable.cpp  sensor.cpp  separator.cpp  shop_treasure.cpp  stairs.cpp  stream.cpp  switch.cpp  teletransporter.cpp  tile.cpp  wall.cpp
src/gui/: change_dialog_id_dialog.cpp  change_dialog_id_dialog.ui  change_pattern_id_dialog.cpp  change_pattern_id_dialog.ui  change_source_image_dialog.cpp  change_string_key_dialog.cpp  change_string_key_dialog.ui  closable_tab_bar.cpp  color_picker.cpp  console.cpp  console.ui  console_line_edit.cpp  dialog_properties_table.cpp  dialogs_editor.cpp  dialogs_editor.ui  dialogs_tree_view.cpp  edit_entity_dialog.cpp  edit_entity_dialog.ui  editor.cpp  editor_tabs.cpp  entity_item.cpp  entity_selector.cpp  external_script_dialog.cpp  external_script_dialog.ui  find_text_dialog.cpp  find_text_dialog.ui  get_animation_name_dialog.cpp  ground_selector.cpp  gui_tools.cpp  layer_selector.cpp  lua_syntax_highlighter.cpp  main_window.cpp  main_window.ui  map_editor.cpp  map_editor.ui  map_scene.cpp  map_view.cpp  mouse_coordinates_tracking_tool.cpp  new_animation_dialog.cpp  new_animation_dialog.ui  (+36 more)
translations/: solarus_editor_de.ts  solarus_editor_es.ts  solarus_editor_fr.ts  solarus_editor_fr_FR.ts
work/: entity_fields.txt
(+113 files in other folders)
